Updated to new server location